--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,7 +161,7 @@ a:after {
 
 /* Header Wrap */
 #headerwrap {
-	background: url(../img/mydp.png) no-repeat ;
+	background: url(../img/myy.jpg) no-repeat ;
 	
 	
 }
